--- a/index.html
+++ b/index.html
@@ -44,6 +44,80 @@
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4" id="content-area">
             <h2 class="mt-4">Welcome to the FAENG PLATFORM</h2>
             <p>Select a department to explore the resources available.</p>
+
+            <!-- Personnel Sections -->
+            <section id="personnel">
+                <h2>Key Personnel</h2>
+
+                <div class="row">
+                    <div class="col-md-4 text-center">
+                        <img src="dean_photo.jpg" alt="Dean FAENG" class="img-fluid rounded-circle" style="width: 150px;">
+                        <h3>Dr. Jane Doe</h3>
+                        <p>Dean of the Faculty of Engineering. Oversees all engineering departments and represents the faculty in university meetings.</p>
+                    </div>
+
+                    <div class="col-md-4 text-center">
+                        <img src="sub_dean_photo.jpg" alt="Sub-Dean FAENG" class="img-fluid rounded-circle" style="width: 150px;">
+                        <h3>Prof. John Smith</h3>
+                        <p>Sub-Dean, responsible for assisting the Dean in academic and administrative matters.</p>
+                    </div>
+
+                    <div class="col-md-4 text-center">
+                        <img src="deputy_dean_photo.jpg" alt="Deputy Dean" class="img-fluid rounded-circle" style="width: 150px;">
+                        <h3>Dr. Emily Clark</h3>
+                        <p>Deputy Dean, focused on research and faculty development initiatives.</p>
+                    </div>
+
+                    <div class="col-md-4 text-center">
+                        <img src="faculty_exam_officer_photo.jpg" alt="Faculty Exam Officer" class="img-fluid rounded-circle" style="width: 150px;">
+                        <h3>Mr. Robert Brown</h3>
+                        <p>Faculty Exam Officer, responsible for organizing and overseeing exams within the Faculty of Engineering.</p>
+                    </div>
+
+                    <!-- Heads of Departments -->
+                    <div class="col-md-4 text-center">
+                        <img src="electrical_hod_photo.jpg" alt="HOD Electrical Engineering" class="img-fluid rounded-circle" style="width: 150px;">
+                        <h3>Dr. Alice Johnson</h3>
+                        <p>Head of Electrical Engineering Department. Expert in power systems and renewable energy.</p>
+                    </div>
+
+                    <div class="col-md-4 text-center">
+                        <img src="mechanical_hod_photo.jpg" alt="HOD Mechanical Engineering" class="img-fluid rounded-circle" style="width: 150px;">
+                        <h3>Prof. Michael Lee</h3>
+                        <p>Head of Mechanical Engineering Department. Specializes in thermodynamics and fluid mechanics.</p>
+                    </div>
+
+                    <div class="col-md-4 text-center">
+                        <img src="civil_hod_photo.jpg" alt="HOD Civil Engineering" class="img-fluid rounded-circle" style="width: 150px;">
+                        <h3>Dr. Susan White</h3>
+                        <p>Head of Civil Engineering Department. Focuses on structural engineering and materials science.</p>
+                    </div>
+
+                    <div class="col-md-4 text-center">
+                        <img src="automotive_hod_photo.jpg" alt="HOD Automotive Engineering" class="img-fluid rounded-circle" style="width: 150px;">
+                        <h3>Prof. David Green</h3>
+                        <p>Head of Automotive Engineering Department. Expert in vehicle dynamics and propulsion systems.</p>
+                    </div>
+
+                    <div class="col-md-4 text-center">
+                        <img src="water_resources_hod_photo.jpg" alt="HOD Water Resources and Environmental Engineering" class="img-fluid rounded-circle" style="width: 150px;">
+                        <h3>Dr. Laura Martinez</h3>
+                        <p>Head of Water Resources and Environmental Engineering Department. Specializes in hydrology and environmental impact assessments.</p>
+                    </div>
+
+                    <div class="col-md-4 text-center">
+                        <img src="agricultural_hod_photo.jpg" alt="HOD Agricultural Engineering" class="img-fluid rounded-circle" style="width: 150px;">
+                        <h3>Dr. Kevin Brown</h3>
+                        <p>Head of Agricultural Engineering Department. Focuses on farm machinery and sustainable agriculture.</p>
+                    </div>
+
+                    <div class="col-md-4 text-center">
+                        <img src="mechatronics_hod_photo.jpg" alt="HOD Mechatronics Engineering" class="img-fluid rounded-circle" style="width: 150px;">
+                        <h3>Prof. Lisa Taylor</h3>
+                        <p>Head of Mechatronics Engineering Department. Expert in robotics and automation systems.</p>
+                    </div>
+                </div>
+            </section>
         </main>
     </div>
 
