--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 <div class="row">
                     <div class="col-md-4 text-center">
                         <img src="dean_photo.jpg" alt="Dean FAENG" class="img-fluid rounded-circle" style="width: 150px;">
-                        <h3>Dr. Jane Doe</h3>
-                        <p>Dean of the Faculty of Engineering. Oversees all engineering departments and represents the faculty in university meetings.</p>
+                        <h3>Engr. Prof. Muhammad Sani Gaya</h3>
+                        <p>Dean of the Faculty of Engineering. Professor Department of Electrical Engineering, Phone:+2348023063442,email:muhdgayasani@gmail.com, Oversees all engineering departments and represents the faculty in university meetings.</p>
                     </div>
 
                     <div class="col-md-4 text-center">
