--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <div class="container-fluid p-3 bg-primary text-white text-center">
         <img src="faeng_logo.png" alt="FAENG Logo" class="img-fluid" style="width: 80px;">
         <h1>FAENG PLATFORM</h1>
-        <p>Your gateway to academic resources in the Faculty of Engineering at ADUSTECH.</p>
+        <div id="welcome-message">
+            <p>Your gateway to academic resources in the Faculty of Engineering at ADUSTECH.</p>
+        </div>
     </div>
 
     <div class="row">
@@ -53,7 +55,7 @@
                     <div class="col-md-4 text-center">
                         <img src="dean_photo.jpg" alt="Dean FAENG" class="img-fluid rounded-circle" style="width: 150px;">
                         <h3>Engr. Prof. Muhammad Sani Gaya</h3>
-                        <p>Dean of the Faculty of Engineering.         Professor Department of Electrical Engineering,        Phone:+2348023063442,    email:muhdgayasani@gmail.com, Oversees all engineering departments and represents the faculty in university meetings.</p>
+                        <p>Dean of the Faculty of Engineering. Professor Department of Electrical Engineering, Phone:+2348023063442, email:muhdgayasani@gmail.com, Oversees all engineering departments and represents the faculty in university meetings.</p>
                     </div>
 
                     <div class="col-md-4 text-center">
