--- a/index.html
+++ b/index.html
@@ -60,63 +60,63 @@
 
                     <div class="col-md-4 text-center">
                         <img src="sub_dean_photo.jpg" alt="Sub-Dean FAENG" class="img-fluid rounded-circle" style="width: 150px;">
-                        <h3>Prof. John Smith</h3>
-                        <p>Sub-Dean, responsible for assisting the Dean in academic and administrative matters.</p>
+                        <h3>Prof. Murtala Sule Danbatta</h3>
+                        <p>Professor Department of Mechanical Engineering	Phone:08162322616	Email: mrsdambatta@gmail.comSub-Dean, responsible for assisting the Dean in academic and administrative matters.</p>
                     </div>
 
                     <div class="col-md-4 text-center">
                         <img src="deputy_dean_photo.jpg" alt="Deputy Dean" class="img-fluid rounded-circle" style="width: 150px;">
-                        <h3>Dr. Emily Clark</h3>
+                        <h3>Dr. Najiyu</h3>
                         <p>Deputy Dean, focused on research and faculty development initiatives.</p>
                     </div>
 
                     <div class="col-md-4 text-center">
                         <img src="faculty_exam_officer_photo.jpg" alt="Faculty Exam Officer" class="img-fluid rounded-circle" style="width: 150px;">
-                        <h3>Mr. Robert Brown</h3>
+                        <h3>Engr. Usman Aliyu Magaji</h3>
                         <p>Faculty Exam Officer, responsible for organizing and overseeing exams within the Faculty of Engineering.</p>
                     </div>
 
                     <!-- Heads of Departments -->
                     <div class="col-md-4 text-center">
                         <img src="electrical_hod_photo.jpg" alt="HOD Electrical Engineering" class="img-fluid rounded-circle" style="width: 150px;">
-                        <h3>Dr. Alice Johnson</h3>
-                        <p>Head of Electrical Engineering Department. Expert in power systems and renewable energy.</p>
+                        <h3>Dr. Bashir Muhammad</h3>
+                        <p>Assoc. Prof Department of Electrical Engineering, Phone:	+2349064686130,	Email: muhdbashir1423@gmail.comHead of Electrical Engineering Department. Expert in power systems and renewable energy.</p>
                     </div>
 
                     <div class="col-md-4 text-center">
                         <img src="mechanical_hod_photo.jpg" alt="HOD Mechanical Engineering" class="img-fluid rounded-circle" style="width: 150px;">
-                        <h3>Prof. Michael Lee</h3>
-                        <p>Head of Mechanical Engineering Department. Specializes in thermodynamics and fluid mechanics.</p>
+                        <h3>Assoc. Prof. Bashir Isiyaku Kunya </h3>
+                        <p>Associate Professor Department of Mechanical Engineering, Phone:	08030435536, Email:kunyabashir@yahoo.comHead of Mechanical Engineering Department. Specializes in thermodynamics and fluid mechanics.</p>
                     </div>
 
                     <div class="col-md-4 text-center">
                         <img src="civil_hod_photo.jpg" alt="HOD Civil Engineering" class="img-fluid rounded-circle" style="width: 150px;">
-                        <h3>Dr. Susan White</h3>
-                        <p>Head of Civil Engineering Department. Focuses on structural engineering and materials science.</p>
+                        <h3>Dr. Ashiru Sani</h3>
+                        <p>Senior Lecturer Department of Civil Engineering, Phone:	+2348069583443, Email: ashirusanimadobs@yahoo.comHead of Civil Engineering Department. Focuses on structural engineering and materials science.</p>
                     </div>
 
                     <div class="col-md-4 text-center">
                         <img src="automotive_hod_photo.jpg" alt="HOD Automotive Engineering" class="img-fluid rounded-circle" style="width: 150px;">
-                        <h3>Prof. David Green</h3>
-                        <p>Head of Automotive Engineering Department. Expert in vehicle dynamics and propulsion systems.</p>
+                        <h3>Assoc. Prof. Abdullahi Ahmed</h3>
+                        <p>Associate Professor Department of Mechanical Engineering, Phone:	08035801781, Email: abdula2k2@yahoo.comHead of Automotive Engineering Department. Expert in vehicle dynamics and propulsion systems.</p>
                     </div>
 
                     <div class="col-md-4 text-center">
                         <img src="water_resources_hod_photo.jpg" alt="HOD Water Resources and Environmental Engineering" class="img-fluid rounded-circle" style="width: 150px;">
-                        <h3>Dr. Laura Martinez</h3>
-                        <p>Head of Water Resources and Environmental Engineering Department. Specializes in hydrology and environmental impact assessments.</p>
+                        <h3>Dr. Muhammad Tajuri Ahmad</h3>
+                        <p>Associate Professor Department of Water Resources & Enviromental Engineering, Phone:	08032171047, Email: amtajuri@kustwudil.edu.ngHead of Water Resources and Environmental Engineering Department. Specializes in hydrology and environmental impact assessments.</p>
                     </div>
 
                     <div class="col-md-4 text-center">
                         <img src="agricultural_hod_photo.jpg" alt="HOD Agricultural Engineering" class="img-fluid rounded-circle" style="width: 150px;">
-                        <h3>Dr. Kevin Brown</h3>
-                        <p>Head of Agricultural Engineering Department. Focuses on farm machinery and sustainable agriculture.</p>
+                        <h3>Dr. Shamsu Auwal Tukur</h3>
+                        <p>Senior Lecturer Department of Mechanical Engineering,Phone:	08064442984, Phone:	satgn06@gmail.comHead of Agricultural Engineering Department. Focuses on farm machinery and sustainable agriculture.</p>
                     </div>
 
                     <div class="col-md-4 text-center">
                         <img src="mechatronics_hod_photo.jpg" alt="HOD Mechatronics Engineering" class="img-fluid rounded-circle" style="width: 150px;">
-                        <h3>Prof. Lisa Taylor</h3>
-                        <p>Head of Mechatronics Engineering Department. Expert in robotics and automation systems.</p>
+                        <h3>Dr. Aliyu M. Abdu</h3>
+                        <p>Senior Lecturer Department of Mechatronics Engineering, Phone:	08032205141, Email:	aliyu104@yahoo.comHead of Mechatronics Engineering Department. Expert in robotics and automation systems.</p>
                     </div>
                 </div>
             </section>
