--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
                     <div class="col-md-4 text-center">
                         <img src="deputy_dean_photo.jpg" alt="Deputy Dean" class="img-fluid rounded-circle" style="width: 150px;">
-                        <h3>Dr. Najiyu</h3>
+                        <h3>Dr. Najiyyu Abubakar</h3>
                         <p>Deputy Dean, focused on research and faculty development initiatives.</p>
                     </div>
 
