--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
 
                     <div class="col-md-4 text-center">
                         <img src="deputy_dean_photo.jpg" alt="Deputy Dean" class="img-fluid rounded-circle" style="width: 150px;">
-                        <h3>Dr. Najiyyu Abubakar</h3>
-                        <p>Deputy Dean, focused on research and faculty development initiatives.</p>
+                        <h3>Dr. Najiyu Abubakar</h3>
+                        <p>Deputy Dean, focused on research and faculty development initiatives.Associate Professor Department of Civil Engineering, Phone:	+2348037337309	Email: najiyunajingi@yahoo.com</p>
                     </div>
 
                     <div class="col-md-4 text-center">
                         <img src="faculty_exam_officer_photo.jpg" alt="Faculty Exam Officer" class="img-fluid rounded-circle" style="width: 150px;">
                         <h3>Engr. Usman Aliyu Magaji</h3>
-                        <p>Faculty Exam Officer, responsible for organizing and overseeing exams within the Faculty of Engineering.</p>
+                        <p>Faculty Exam Officer, responsible for organizing and overseeing exams within the Faculty of Phone: +234 803 838 1970</p>
                     </div>
 
                     <!-- Heads of Departments -->
